TMESales/AADDS/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroups_aadds_nsg_name": {
            "defaultValue": "aadds-nsg",
            "type": "String"
        },
        "domainServices_tmesales_bezencon_net_name": {
            "defaultValue": "tmesales.bezencon.net",
            "type": "String"
        },
        "loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name": {
            "defaultValue": "aadds-da71415dbf4b4edb8ee991c5772f60d5-lb",
            "type": "String"
        },
        "networkInterfaces_aadds_24ca7fc51860464686968411e0cb3300_nic_name": {
            "defaultValue": "aadds-24ca7fc51860464686968411e0cb3300-nic",
            "type": "String"
        },
        "networkInterfaces_aadds_2ad43a563d5144f0ae941a589e2f8563_nic_name": {
            "defaultValue": "aadds-2ad43a563d5144f0ae941a589e2f8563-nic",
            "type": "String"
        },
        "publicIPAddresses_aadds_da71415dbf4b4edb8ee991c5772f60d5_pip_name": {
            "defaultValue": "aadds-da71415dbf4b4edb8ee991c5772f60d5-pip",
            "type": "String"
        },
        "virtualNetworks_vnet_hub_ne_externalid": {
            "defaultValue": "/subscriptions/be8567b7-fd32-478f-ada5-2df8958c3d55/resourceGroups/TMESALES-HUB/providers/Microsoft.Network/virtualNetworks/vnet-hub-ne",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.AAD/domainServices",
            "apiVersion": "2020-01-01",
            "name": "[parameters('domainServices_tmesales_bezencon_net_name')]",
            "location": "northeurope",
            "properties": {
                "domainName": "[parameters('domainServices_tmesales_bezencon_net_name')]",
                "replicaSets": [
                    {
                        "location": "North Europe",
                        "subnetId": "[concat(parameters('virtualNetworks_vnet_hub_ne_externalid'), '/subnets/snet-aadds')]"
                    }
                ],
                "ldapsSettings": {
                    "ldaps": "Disabled",
                    "externalAccess": "Disabled"
                },
                "domainSecuritySettings": {
                    "ntlmV1": "Enabled",
                    "tlsV1": "Enabled",
                    "syncNtlmPasswords": "Enabled",
                    "syncKerberosPasswords": "Enabled",
                    "syncOnPremPasswords": "Enabled"
                },
                "filteredSync": "Disabled",
                "resourceForestSettings": {
                    "settings": []
                },
                "domainConfigurationType": "FullySynced",
                "notificationSettings": {
                    "notifyGlobalAdmins": "Enabled",
                    "notifyDcAdmins": "Enabled",
                    "additionalRecipients": []
                },
                "sku": "Standard"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-08-01",
            "name": "[parameters('networkSecurityGroups_aadds_nsg_name')]",
            "location": "northeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowPSRemoting",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 301,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowRD",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "CorpNetSaw",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 201,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-08-01",
            "name": "[parameters('publicIPAddresses_aadds_da71415dbf4b4edb8ee991c5772f60d5_pip_name')]",
            "location": "northeurope",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "zones": [
                "1",
                "2",
                "3"
            ],
            "properties": {
                "ipAddress": "20.67.178.126",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "cust-t-m-e-s-a-l-e-s-0-b-e-da71415d-bf4b-4edb-8ee9-91c5772f60d5",
                    "fqdn": "cust-t-m-e-s-a-l-e-s-0-b-e-da71415d-bf4b-4edb-8ee9-91c5772f60d5.northeurope.cloudapp.azure.com"
                },
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/backendAddressPools",
            "apiVersion": "2020-08-01",
            "name": "[concat(parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), '/D30TU3-BF5MKDB8Be')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'))]"
            ],
            "properties": {
                "loadBalancerBackendAddresses": [
                    {
                        "name": "TMESALES-AADDS_aadds-2ad43a563d5144f0ae941a589e2f8563-nicG5630ZI4HWNFKJUIpcfg",
                        "properties": {}
                    },
                    {
                        "name": "TMESALES-AADDS_aadds-24ca7fc51860464686968411e0cb3300-nicJQGCJEKMX4TJMFKIpcfg",
                        "properties": {}
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "apiVersion": "2020-08-01",
            "name": "[concat(parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), '/G5630ZI4HWNFKJUPsh')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'))]"
            ],
            "properties": {
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')), '/frontendIPConfigurations/D30TU3-BF5MKDB8Fe')]"
                },
                "frontendPort": 5986,
                "backendPort": 5986,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 15,
                "protocol": "Tcp",
                "enableTcpReset": false
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "apiVersion": "2020-08-01",
            "name": "[concat(parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), '/JQGCJEKMX4TJMFKPsh')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'))]"
            ],
            "properties": {
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')), '/frontendIPConfigurations/D30TU3-BF5MKDB8Fe')]"
                },
                "frontendPort": 5987,
                "backendPort": 5986,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 15,
                "protocol": "Tcp",
                "enableTcpReset": false
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-08-01",
            "name": "[concat(parameters('networkSecurityGroups_aadds_nsg_name'), '/AllowPSRemoting')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_aadds_nsg_name'))]"
            ],
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 301,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-08-01",
            "name": "[concat(parameters('networkSecurityGroups_aadds_nsg_name'), '/AllowRD')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_aadds_nsg_name'))]"
            ],
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "CorpNetSaw",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 201,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2020-08-01",
            "name": "[parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_aadds_da71415dbf4b4edb8ee991c5772f60d5_pip_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]"
            ],
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "D30TU3-BF5MKDB8Fe",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_aadds_da71415dbf4b4edb8ee991c5772f60d5_pip_name'))]"
                            },
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "D30TU3-BF5MKDB8Be",
                        "properties": {
                            "loadBalancerBackendAddresses": [
                                {
                                    "name": "TMESALES-AADDS_aadds-2ad43a563d5144f0ae941a589e2f8563-nicG5630ZI4HWNFKJUIpcfg",
                                    "properties": {}
                                },
                                {
                                    "name": "TMESALES-AADDS_aadds-24ca7fc51860464686968411e0cb3300-nicJQGCJEKMX4TJMFKIpcfg",
                                    "properties": {}
                                }
                            ]
                        }
                    }
                ],
                "loadBalancingRules": [],
                "probes": [],
                "inboundNatRules": [
                    {
                        "name": "G5630ZI4HWNFKJUPsh",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')), '/frontendIPConfigurations/D30TU3-BF5MKDB8Fe')]"
                            },
                            "frontendPort": 5986,
                            "backendPort": 5986,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 15,
                            "protocol": "Tcp",
                            "enableTcpReset": false
                        }
                    },
                    {
                        "name": "JQGCJEKMX4TJMFKPsh",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')), '/frontendIPConfigurations/D30TU3-BF5MKDB8Fe')]"
                            },
                            "frontendPort": 5987,
                            "backendPort": 5986,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 15,
                            "protocol": "Tcp",
                            "enableTcpReset": false
                        }
                    }
                ],
                "outboundRules": [
                    {
                        "name": "D30TU3-BF5MKDB8Ge",
                        "properties": {
                            "allocatedOutboundPorts": 1024,
                            "protocol": "Tcp",
                            "enableTcpReset": false,
                            "idleTimeoutInMinutes": 4,
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]"
                            },
                            "frontendIPConfigurations": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name')), '/frontendIPConfigurations/D30TU3-BF5MKDB8Fe')]"
                                }
                            ]
                        }
                    }
                ],
                "inboundNatPools": []
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-08-01",
            "name": "[parameters('networkInterfaces_aadds_24ca7fc51860464686968411e0cb3300_nic_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]",
                "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'JQGCJEKMX4TJMFKPsh')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "JQGCJEKMX4TJMFKIpcfg",
                        "properties": {
                            "privateIPAddress": "192.168.15.133",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[concat(parameters('virtualNetworks_vnet_hub_ne_externalid'), '/subnets/snet-aadds')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'JQGCJEKMX4TJMFKPsh')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [
                        "192.168.15.132",
                        "192.168.15.133"
                    ]
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-08-01",
            "name": "[parameters('networkInterfaces_aadds_2ad43a563d5144f0ae941a589e2f8563_nic_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]",
                "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'G5630ZI4HWNFKJUPsh')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "G5630ZI4HWNFKJUIpcfg",
                        "properties": {
                            "privateIPAddress": "192.168.15.132",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[concat(parameters('virtualNetworks_vnet_hub_ne_externalid'), '/subnets/snet-aadds')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'D30TU3-BF5MKDB8Be')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_aadds_da71415dbf4b4edb8ee991c5772f60d5_lb_name'), 'G5630ZI4HWNFKJUPsh')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [
                        "192.168.15.132",
                        "192.168.15.133"
                    ]
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            }
        }
    ]
}
